# learn-german-app

./: .env.example  .gitignore  DEPLOYMENT.md  PROGRESS.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: .dockerignore  Dockerfile  alembic.ini  fly.toml  pyproject.toml
api/migrations/: env.py
api/migrations/versions/: 2026_07_14_0911-f9f85d11c290_initial_schema.py
api/src/lgapp/: auth.py  cli.py  config.py  db.py  deps.py  errors.py  logging.py  main.py  openapi.py
api/src/lgapp/models/: __init__.py  base.py  content.py  user.py
api/src/lgapp/routers/: decks.py  health.py  reviews.py  stats.py
api/src/lgapp/schemas/: api.py
api/src/lgapp/services/: importer.py  queue.py  reviews.py  scheduler.py  stats.py
api/tests/: conftest.py  factories.py  test_api.py  test_auth.py  test_cli.py  test_health.py  test_importer.py  test_logging.py  test_migrations.py  test_models.py  test_scheduler.py
seed/: a1-basics.csv
web/: .env.example  index.html  openapi.json  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: ReviewCard.tsx  SyncBadge.tsx
web/src/db/: outbox.ts
web/src/hooks/: useAuth.ts  useOnlineStatus.ts  usePendingCount.ts  useReviewSession.ts
web/src/lib/: api-types.ts  api.ts  supabase.ts  sync.test.ts  sync.ts  types.ts  uuid.test.ts  uuid.ts
web/src/pages/: Decks.tsx  Login.tsx  Review.test.tsx  Review.tsx  Stats.tsx
web/src/test/: setup.ts
