[project]
name = "lgapp"
version = "0.1.0"
description = "German learning app — API"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120",
    "uvicorn[standard]>=0.38",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pyjwt[crypto]>=2.10",
    "httpx>=0.28",
    "fsrs>=6.3.1,<7",
    "typer>=0.15",
    "uuid-utils>=0.10",
]

[project.scripts]
lgapp = "lgapp.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "mypy>=1.14",
    "asgi-lifespan>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lgapp"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true

# The scheduler and importer carry the load-bearing logic; hold them to a higher bar.
[[tool.mypy.overrides]]
module = "lgapp.services.*"
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
